package seedu.nuscents.commands;

/**
 * Container for valid commands executed by the user in the application.
 */
public class ListOfCommands {
    public static final String COMMAND_EXIT = "exit";
    public static final String COMMAND_LIST = "list";
    public static final String COMMAND_ALLOWANCE = "allowance";
    public static final String COMMAND_EXPENSE = "expense";
    public static final String COMMAND_DELETE = "delete";
    public static final String COMMAND_FIND = "find";
    public static final String COMMAND_VIEW = "view";
    public static final String COMMAND_FILTER = "filter";
    public static final String COMMAND_EDIT = "edit";
    public static final String COMMAND_BUDGET = "budget";
    public static final String COMMAND_HELP = "help";
}
