@startuml
!include style.puml
left to right direction
hide circle
skinparam classAttributeIconSize 0

Package Commands as CommandPackage <<Rectangle>>{
    class HelpCommand {
    + void execute(TransactionList)
    }
    class AddCommand {
    - Transaction transaction
    + void execute(TransactionList)
    }
    class ListOfCommands {
    + {static} String COMMAND_EXIT
    + {static} String COMMAND_LIST
    + {static} String COMMAND_ALLOWANCE
    + {static} String COMMAND_EXPENSE
    + {static} String COMMAND_DELETE
    + {static} String COMMAND_FIND
    + {static} String COMMAND_VIEW
    + {static} String COMMAND_FILTER
    + {static} String COMMAND_EDIT
    + {static} String COMMAND_BUDGET
    + {static} String COMMAND_HELP
    }
    class DeleteCommand {
    - int taskIndex
    + void execute(TransactionList)
    }
    class InvalidCommand {
    + void execute(TransactionList)
    }
    class FilterCommand {
    - TransactionCategory category
    + void execute(TransactionList)
    }
    class ExitCommand {
    + void execute(TransactionList)
    + {static} boolean isExit(Command)
    }
    class ViewCommand {
    - int taskIndex
    + void execute(TransactionList)
    }
    class ListCommand {
    + void execute(TransactionList)
    }
    class EditCommand {
    - int index
    - Transaction transaction
    + void execute(TransactionList)
    }
    abstract class Command {
    + {abstract}void execute(TransactionList)
    }
    class BudgetCommand {
    - float budget
    + void execute(TransactionList)
    }
    
    
    Command <|-u- HelpCommand
    Command <|-u- AddCommand
    Command <|-u- DeleteCommand
    Command <|-u- InvalidCommand
    Command <|-l- FilterCommand
    Command <|-- ExitCommand
    Command <|- ViewCommand
    Command <|-- ListCommand
    Command <|-- EditCommand
    Command <|-- BudgetCommand
}
@enduml